Modernise Build Setup & Streamline Tests (#10)
* Update gradle to 8.5, use typesafe project accessors

* Add conventions plugin, version catalog

- Remove cross-configuration in favour of conventions plugin
- Use version catalog for managing most dependencies
- Use only JUnit 5, Kotlin 1.9.21

* Updated test cases and assertions to use JUnit 5