@@ -1,25 +1,26 @@
 package com.jetbrains.qodana.sarif;
 
 import com.jetbrains.qodana.sarif.model.*;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 import java.io.StringReader;
 import java.io.StringWriter;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.time.*;
+import java.time.Instant;
+import java.time.LocalDate;
+import java.time.OffsetDateTime;
+import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class SerializeTest {
     @Test
     public void testPropertyBag() throws IOException {
-        Path target = Paths.get("src/test/resources/testData/serializeTest/properties.json");
-        String targetJson = Files.readString(target);
+        String targetJson = TestUtils.readStringFromPath("src/test/resources/testData/serializeTest/properties.json");
         PropertyBag bag = new PropertyBag();
         bag.put("someProp", "someValue");
         bag.put("someArray", Arrays.asList("1", "2", "3"));
@@ -30,12 +31,11 @@ public class SerializeTest {
 
     @Test
     public void testPartialFingerprint() throws IOException {
-        Path target = Paths.get("src/test/resources/testData/serializeTest/partialFingerprint.json");
-        String targetJson = Files.readString(target);
+        String targetJson = TestUtils.readStringFromPath("src/test/resources/testData/serializeTest/partialFingerprint.json");
         VersionedMap<String> partialFingerprints = new VersionedMap<>();
         partialFingerprints.put("idea", 1, "value");
         SarifReport report = new SarifReport()
-                .withRuns(List.of(new Run().withResults(List.of(
+                .withRuns(Collections.singletonList(new Run().withResults(Collections.singletonList(
                         new Result().withPartialFingerprints(partialFingerprints)))
                 ));
         doTest(targetJson, report);
@@ -55,23 +55,23 @@ public class SerializeTest {
         base = base.plus(943, ChronoUnit.MILLIS);
         Instant millisPrecision = base.toInstant();
 
-        List<Invocation> invocations = List.of(
+        List<Invocation> invocations = Arrays.asList(
                 new Invocation().withStartTimeUtc(dayPrecision).withEndTimeUtc(minutePrecision),
                 new Invocation().withStartTimeUtc(secondPrecision).withEndTimeUtc(millisPrecision)
         );
 
-        SarifReport before = new SarifReport().withRuns(List.of(new Run().withInvocations(invocations)));
+        SarifReport before = new SarifReport().withRuns(Collections.singletonList(new Run().withInvocations(invocations)));
 
         SarifReport after;
         // not directly comparing json here, because we will always include at least hours and minutes (spec compliant)
-        try(StringWriter w = new StringWriter()) {
+        try (StringWriter w = new StringWriter()) {
             SarifUtil.writeReport(w, before);
 
-            try(StringReader s = new StringReader(w.toString())) {
+            try (StringReader s = new StringReader(w.toString())) {
                 after = SarifUtil.readReport(s);
             }
         }
-        Assert.assertEquals(before, after);
+        assertEquals(before, after);
     }
 
     private void doTest(String targetJson, SarifReport report) throws IOException {
@@ -79,7 +79,7 @@ public class SerializeTest {
         SarifUtil.writeReport(writer, report);
         writer.close();
         String writeResult = writer.toString();
-        Assert.assertEquals(targetJson, writeResult);
+        assertEquals(targetJson, writeResult);
     }
 
 }
